# congress2dataset

./: .gitignore  README.md  eda.ipynb  pyproject.toml
src/congress2dataset/: scraper.py
src/congress2dataset/parse/: bill.py  bill_text.py
src/congress2dataset/scrape/: bill.py  bill_text.py  roll_call.py
