[project]
name = "congress2dataset"
version = "0.1.0"
description = "live scraping congress.gov"
authors = [
    {name = "Hunter Heidenreich", email = "hheidenreich@g.harvard.edu"},
]
dependencies = [
    "playwright>=1.43.0",
    "pymongo>=4.6.3",
    "ruff>=0.4.0",
    "bs4>=0.0.2",
    "tqdm>=4.66.2",
    "pandas>=2.2.2",
    "jupyterlab>=4.1.6",
    "iprogress>=0.4",
    "plotly>=5.22.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
